# Shit

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  launch-shit-vault.cmd  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
assets/icon-work/: build_icon_variants.py
docs/: HANDOFF.md  PRD-prevent-sleep.md  handoff-auto-mixing-peak-trigger.md  handoff-auto-mixing-product-reset.md  handoff-auto-mixing-slider-plan.md  handoff-auto-mixing-ui-polish.md  handoff-v1.0-release.md  handoff-v1.1-release.md
docs/superpowers/plans/: 2026-06-09-prevent-sleep-fix.md
docs/superpowers/specs/: 2026-06-09-prevent-sleep-fix-design.md
release-page/: index.html  script.js  styles.css
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: auto_mixing.rs  main.rs  prevent_sleep.rs
src/app/hooks/: useModuleSettings.ts  useModuleState.ts  useOpenModuleSettings.ts  useRegisteredModules.ts  useToggleModuleEnabled.ts
src/app/layout/: gridConfig.ts  layoutEngine.ts
src/app/registry/: loadModuleRegistry.test.ts  loadModuleRegistry.ts  moduleTypes.ts  validateModule.ts
src/app/shell/: AppShell.test.tsx  AppShell.tsx  DashboardPage.tsx  ModuleCardHost.tsx  ModuleSettingsDrawer.tsx
src/app/state/: layoutStore.ts  moduleSettingsStore.ts  moduleStateStore.ts  registryStore.ts
src/app/ui/: CardFrame.tsx  SettingsChoiceCard.tsx  SettingsSection.tsx  SettingsStatusPill.tsx  SettingsValueButton.tsx
(+11 files in other folders)
